--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <li>Docker</li>
         <li>Ansible</li>
         <li>Integração Contínua; gosto de comida</li>
-        <li>Kubernetes</li>
+        <li>Kubernets/li>
     </ul>
 </body>
 </html>
