--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
     <ul>
         <li>Vagrant</li>
-        <li>Docker</li>
+        <li>Curso de Docker: Criando containers sem dor de cabeça</li>
         <li>Ansible</li>
         <li>Integração Contínua; gosto de comida</li>
         <li>Kubernets/li>
