--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <ul>
         <li>Vagrant: Gerenciando máquinas virtuais</li>
         <li>Docker: Criando containers sem dor de cabeça</li>
-        <li>Ansible</li>
+        <li>Ansible:puts</li>
         <li>Integração Contínua;</li>
         <li>Curso de Docker: Criando containers sem dor de cabeça</li>
          <li>Kubernets/li>
